yTicks are now fixed to either 5 or 10 (to prevent wkward numbers in the y-label and to prevent the y-labels to overflow out of the size of the grid area), this is a lazier fix than is ideal, but solves a lot of problems very simply. Bars and x-labels now have dynamic spacing and padding. X-title has been raised slightly (by making the x-label row shorter). Eroneous counter in the JS file has been removed.

--- a/bar-chart.css
+++ b/bar-chart.css
@@ -9,7 +9,7 @@ body {
 
 #chart {
   display: inline-grid;
-  grid-template-rows: 60px auto 60px 20px;
+  grid-template-rows: 60px auto 50px 20px;
     grid-template-columns: 30px 40px 5px auto;
     grid-template-areas:
     ". . . title"
@@ -51,7 +51,7 @@ h1 {
 .numbers {
   text-align: right;
   position: relative;
-  bottom: 8px;
+  bottom: 7px;
   right: 5px;
 }
 
@@ -64,7 +64,7 @@ h1 {
  height: 100%;
  grid-row-gap: 1px;
  padding-top: 1px;
- background-color: red;
+ background-color: #eee;
 }
 
 .ticks {
@@ -81,9 +81,9 @@ h1 {
 
 .bars {
   display: grid;
-  grid-template-rows: repeat(100, 1fr); /* all values must be turned into percentages */
+  grid-template-rows: repeat(100, 1fr);
   height: 100%;
-  padding: 5px 10px 0 10px;
+  /*padding: 5px 10px 0 10px;  not sure if the 5px (top padding) is serving */
 }
 
 [class*="bar-"] {
@@ -112,9 +112,9 @@ h1 {
 
 #values {
   display: grid;
-  grid-column-gap: 9px;
+  /*grid-column-gap: 10px;*/
   width: 100%;
-  padding: 10px;
+  /*padding: 10px;*/
 }
 
 #x-axis {
